<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package>
  <name>panther_msgs</name>
  <version>0.0.0</version>
  <description>
    Custom messages for Panther robot
  </description>
  <maintainer email="support@husarion.com">Husarion</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/panther_msgs/tree/ros1</url>
  <url type="bugtracker">https://github.com/husarion/panther_msgs/issues</url>
  <author email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
