<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panther_msgs</name>
  <version>2.1.1</version>
  <description>Custom messages for Panther robot.</description>
  <maintainer email="support@husarion.com">Husarion</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/panther_msgs/tree/ros2</url>
  <url type="bugtracker">https://github.com/husarion/panther_msgs/issues</url>

  <author email="dawid.kmak@husarion.com">Dawid Kmak</author>
  <author email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
