<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>panther_msgs</name>
  <version>0.0.0</version>
  <description>
    Custom messages for Panther robot.
  </description>

  <maintainer email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/panther_msgs/tree/ros1</url>
  <url type="bugtracker">https://github.com/husarion/panther_msgs/issues</url>
  <author email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>